@@ -53,6 +53,10 @@ Output WKT format, for use with older (0.x) versions of PostGIS.
 Note that this will introduce coordinate drifts and will drop
 M values from shapefiles.
 
+.TP 
+\fB\-I\fR
+Create a GiST index on the geometry column. 
+
 .LP
 Note that -a, -c, -d and -p are mutually exclusive.
 
