@@ -13,6 +13,7 @@ PostGIS 1.1.0CVS
 	- NEW line_locate_point() function
 	- JTS support improvements
 	- Fault tolerant btree ops
+	- NEW -I (index) switch in shp2pgsql
 
 PostGIS 1.0.1
 2005/05/24
